src/tests/valid/ivdserial/compoundstatekeys.ivdserial
=================================Element========================================
Path: anonymous-0-HORRIBLY-MAANGLED
------------------------------------------Body
-----------------------------State default
-----------------------------State Expression: 
                     |
           .........and..........
           |                    |
     .....or.......        this.helpme
     |            |
this.effme   this.duckme

------------Attr Key: size-o
Main Constraint
     |
42.000000i

